--- a/Project-History/简历.md
+++ b/Project-History/简历.md
@@ -15,6 +15,12 @@
 
 - - -
 
+#### 工作内容
+1 参与项目的需求确定，参与总体设计，代码编写。
+2 项目日常研发,参与解决项目技术难题。
+3 代码审查
+4 主要负责Android端的开发工作，同时参与部分的j2ee和前端的开发工作
+
 #### 教育经历
 **毕业院校: **南京理工大学紫金学院
 **所学专业: **计算机科学与技术
@@ -151,7 +157,7 @@ LinkUs SDK的升级版本。
 ** 项目链接：** 有供下载的地址
 
 
-#### 南大明道通讯录（2014.08 - 2015.09）
+#### 南大明道通讯录（2014.08 - 2014.10）
 ** 项目描述：**
 该项目是为南大企业家协会定制的APP，主要目的是管理员通过服务端添加协会成员信息及其企业相关信息，用于企业家之间的交流与合作，实现资源的共享。
 
@@ -165,8 +171,23 @@ LinkUs SDK的升级版本。
 
 ** 项目链接：** 下载地址未知
 
+#### ISVPortal（LinkUs SDK对外网站，2015.04-2015.06）
 
-#### 苏宁OTT（2014/11 -- 2015/06）
+** 项目描述：**
+LinkUs SDK的介绍网站，主要是介绍LinkUs的产品信息。提供APP体验下载等等。为LinkUs SDK的推广服务。
+
+
+** 职责：**
+整个网站的开发
+
+** 使用技术：**
+angularjs，nodejs，bootstrap
+
+** 项目链接：** 有运营地址
+
+
+
+#### 苏宁OTT（2014/11 -- 2015/03）
 ** 项目描述：**
 专为苏宁开发的利用运营商的网络，服务由运营商之外的第三方提供的类似微信的应用服务。基于互联网实现免费信息发送，包括文本，图片，录音等。同时基于网络实现免费通话服务。
 
