--- a/Project-History/项目历史.md
+++ b/Project-History/项目历史.md
@@ -73,7 +73,7 @@ OA中工作流部分的代码编写与测试
 
 ### 服务端开发部分
 
-#### 1.苏宁OTT（2014/11 -- 2015/06）
+#### 1.苏宁OTT（2014/11 -- 2015/03）
 ** 项目描述：**
 专为苏宁开发的利用运营商的网络，服务由运营商之外的第三方提供的类似微信的应用服务。基于互联网实现免费信息发送，包括文本，图片，录音等。同时基于网络实现免费通话服务。
 
@@ -95,6 +95,19 @@ OA中工作流部分的代码编写与测试
 
 ** 项目链接：** 无
 
+#### ISVPortal（LinkUs SDK对外网站，2015.07-2015.08）
+
+** 项目描述：**
+LinkUs SDK的介绍网站，主要是介绍LinkUs的产品信息。提供APP体验下载等等
+
+
+** 职责：**
+整个网站的开发
+
+** 使用技术：**
+angularjs，nodejs，bootstrap
+
+** 项目链接：** [地址](http://www.glinkus.com/home)
 
 - - -
 
@@ -104,7 +117,7 @@ OA中工作流部分的代码编写与测试
 ### Android部分
 > 由于公司的要求，2014-07开始转Android了。从此，便一发不可收拾。
 
-#### 1.南大明道通讯录（2014.08 - 2015.09）
+#### 1.南大明道通讯录（2014.08 - 2014.10）
 ** 项目描述：**
 该项目是为南大企业家协会定制的APP，主要目的是管理员通过服务端添加协会成员信息及其企业相关信息，用于企业家之间的交流与合作，实现资源的共享。
 
